# aigf_python

./: .gitignore  README.md  pyproject.toml  requirements.txt  test.py
src/aigf/: __init__.py  daily_call.py
src/aigf_python/: aigf.py  daily_call.py
