[build-system]
requires = ["setuptools>=64", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"



[project]
name = "aigf_python"
dynamic = ["version"]
description = "This package lets you start Vapi calls directly from Python"
license = { text = "self" }
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "daily-python==0.11.0",
    "PyAudio==0.2.14",
    "requests==2.32.3",
]


[project.urls]
Source = "https://github.com/zardamhussain/aigf_python"


[project.optional-dependencies]
#All optional deps

[tool.setuptools.packages.find]
# All the following settings are optional:
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.setuptools_scm]
local_scheme = "no-local-version"
fallback_version = "0.0.0-dev"